[package]
name = "openssl-native-certs"
version = "0.1.0"
edition = "2018"
authors = ["Syrone Wong <wong.syrone@gmail.com>"]
readme = "README.md"
description = "openssl-native-certs allows openssl to use the platform native certificate store"
categories = ["network-programming", "cryptography"]

[dependencies]
openssl = "0.10.34"

[patch.crates-io]
openssl = { git = 'https://github.com/wongsyrone/rust-openssl', rev = 'e38cb1e987749e710794773d92b28951a2af0d4c' }
openssl-sys = { git = 'https://github.com/wongsyrone/rust-openssl', rev = 'e38cb1e987749e710794773d92b28951a2af0d4c' }


[target.'cfg(windows)'.dependencies]
schannel = "0.1.19"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-probe = "0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.2.0"
